--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "pwease invite me uwu",
     "main": "src/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "ts-node --files src/index.ts",
+        "build": "tsc",
+        "start": "pnpm run build && node dist/index.js"
     },
     "repository": {
         "type": "git",
@@ -22,6 +24,10 @@
     },
     "homepage": "https://github.com/creepinson/uwu-bot#readme",
     "dependencies": {
-        "discord.js": "^12.2.0"
+        "discord.js": "^12.2.0",
+        "ts-node": "^8.10.2"
+    },
+    "devDependencies": {
+        "typescript": "^3.9.7"
     }
 }
