--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "homepage": "https://github.com/creepinson/uwu-bot#readme",
     "dependencies": {
+        "@types/node": "^14.0.27",
         "discord.js": "^12.2.0",
         "ts-node": "^8.10.2"
     },
