--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "src/index.js",
     "scripts": {
         "dev": "ts-node --files src/index.ts",
-        "build": "tsc",
-        "start": "pnpm run build && node dist/index.js"
+        "prestart": "tsc",
+        "start": "node dist/index.js"
     },
     "repository": {
         "type": "git",
