--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "dependencies": {
         "@types/node": "^14.0.27",
         "discord.js": "^12.2.0",
-        "ts-node": "^8.10.2"
-    },
-    "devDependencies": {
+        "ts-node": "^8.10.2",
         "typescript": "^3.9.7"
     }
 }
