--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "dependencies": {
         "@types/node": "^14.0.27",
         "discord.js": "^12.2.0",
-        "ts-node": "^8.10.2",
+        "ts-node": "^8.10.2"
+    },
+    "devDependencies": {
         "typescript": "^3.9.7"
     }
 }
