--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "pwease invite me uwu",
     "main": "src/index.js",
     "scripts": {
-        "dev": "ts-node --files src/index.ts",
+        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
         "prestart": "tsc",
         "start": "node dist/index.js"
     },
@@ -26,9 +26,11 @@
     "dependencies": {
         "@types/node": "^14.0.27",
         "discord.js": "^12.2.0",
-        "ts-node": "^8.10.2"
+        "node-fetch": "^2.6.0",
+        "vm2": "^3.9.2"
     },
     "devDependencies": {
+        "ts-node-dev": "^1.0.0-pre.57",
         "typescript": "^3.9.7"
     }
 }
