--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
         "@types/node": "^14.0.27",
         "discord.js": "^12.2.0",
         "node-fetch": "^2.6.0",
-        "vm2": "^3.9.2"
+        "vm2": "^3.9.2",
+        "typescript": "^3.9.7"
     },
     "devDependencies": {
-        "ts-node-dev": "^1.0.0-pre.57",
-        "typescript": "^3.9.7"
+        "ts-node-dev": "^1.0.0-pre.57"
     }
 }
