--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     },
     "homepage": "https://github.com/creepinson/uwu-bot#readme",
     "dependencies": {
-        "discord.js": "^12.2.0",
+        "@types/node": "^14.6.2",
+        "discord.js": "^12.3.1",
         "node-fetch": "^2.6.0",
         "vm2": "^3.9.2",
-        "typescript": "^3.9.7"
+        "typescript": "^4.0.2"
     },
     "devDependencies": {
-        "ts-node-dev": "^1.0.0-pre.57",
-        "@types/node": "^14.0.27"
+        "ts-node-dev": "1.0.0-pre.61"
     }
 }
