--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/index.js",
     "scripts": {
         "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-        "prestart": "tsc",
+        "build": "tsc",
         "start": "node dist/index.js"
     },
     "repository": {
